# HSSInfo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hssinfo.cc  hssinfo.cpp  hssinfo.cu  hssinfo.hpp  main.cpp  main.cu
configs/snap/Networks-with-ground-truth-communities/com-Amazon/: com-amazon.ungraph.conf
configs/snap/Networks-with-ground-truth-communities/com-DBLP/: com-dblp.ungraph.conf
configs/snap/Networks-with-ground-truth-communities/com-LiveJournal/: com-lj.ungraph.conf
configs/snap/Networks-with-ground-truth-communities/com-Orkut/: com-orkut.ungraph.conf
configs/snap/Networks-with-ground-truth-communities/com-Youtube/: com-youtube.ungraph.conf
configs/snap/Networks-with-ground-truth-communities/email-Eu-core/: email-Eu-core.conf
configs/snap/Social-networks/ego-Facebook/: facebook_combined.conf
configs/snap/Social-networks/ego-Gplus/: gplus_combined.conf
configs/snap/Social-networks/ego-Twitter/: twitter_combined.conf
